Completed second task - without pagination.
